- mu-common: Replace template if front-page page is not using correct one (Trello #1178)
- xtec-mailer: Displayed reply-to parameter for admins to allow them to change it (Trello #1206)
- xtec-mailer: Taken Reply-to from headers if specified (Trello #1206)
- enllacos-educatius: Changed xtec.cat to xtec.gencat.cat (Trello #1207)
- Added embed and iframe support in kses
- buddypress-activity-plus: Upgraded from version 1.6.2 to 1.6.4 (Trello #1039)
- buddypress + invite-anyone: Reviewed catalan translation (Trello #1209)
- Hidden options in Settings menu (Trello #1219)
- WSL: Upgraded to version 2.3.0 (Trello #1035)
- Fixed bug with searching members or groups box (Trello #1216)
- Grup-Classe: Added Email subscribers integration to Grup-Classe widget (GitHub #193)
- Email Subscribers: Improved widget design (GitHub #193)
- Reactor: Added description link (Trello #1218)
- intraweb-importer: Copy and update creation date of content. Import again deleted content (Trello #1236)
- import-users-from-csv-with-meta: Upgraded to version 1.8.7.2 (Trello #1043)
- widget-visibility-without-jetpack: Fixed button "Visibility" not showing in Customizer under WP 4.4 (Trello #1176)


Changes 16.03.30
---------------------------------------------------------------------------------------
- Reactor: Fixed bug with right column size (Trello #1185)
- Reactor: Fixed bug with menu icons with 2-lines text (Trello #1184)
- Reactor: Fixed bug when resizing cards (Trello #1187)
- XTEC lib: Added support for extension Email Subscriber in service activation and in URL replace (Trello #1174)
- Theme reactor-serveis-educatius: Fixed menu options set to _blank not opening in new window (Trello #1175)
- Email Subscribers: Changed default group from Public to Portada (Trello #833)


Changes 16.03.14
---------------------------------------------------------------------------------------
- Reactor: Moved hard coded language strings to po file (Trello #963)